--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -14,9 +14,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>LogIn</title>
-
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <title>Login</title>
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -52,13 +50,13 @@
 
             })
         </script>
-        
-        
+
+
         <style>
 
             body {
-                display: flex;   
-                flex-direction: column; 
+                display: flex;
+                flex-direction: column;
                 height: 100vh;
             }
 
@@ -84,7 +82,6 @@
                 border-radius: 20px;
                 border-color: #FFF0EA;
                 box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.2), -2px 5px 5px -1px rgba(0, 0, 0, 0.2);
-                max-width: 700px;
             }
 
             ::placeholder {
@@ -177,17 +174,17 @@
             }
 
             /* Checkbox styling */
-            #cb1 {
+            .my-custom-checkbox {
                 /* -moz-appearance:none;
                 -webkit-appearance:none;
                 -o-appearance:none; */
                 appearance:none;
                 outline: none;
-                content: none;	
+                content: none;
                 vertical-align: middle;
             }
 
-            #cb1::before {
+            .my-custom-checkbox::before {
                 font-size: 12px;
                 color: transparent !important;
                 display: block;
@@ -200,7 +197,7 @@
                 text-align: center;
             }
 
-            #cb1:checked:before {
+            .my-custom-checkbox:checked:before {
                 font-family: "FontAwesome";
                 content: "\f00c";
                 font-size: 12px;
@@ -217,33 +214,50 @@
     <div class=" first-container container-fluid col-lg-6 d-flex justify-content-center" style=" overflow: auto;">
         <div class="d-flex flex-column container-fluid align-items-center justify-content-center">
             <p class="text-style-ro-60">"To find the solution to your problem, you only need to find us."</p>
-            <p style="margin-top: 50px; font-weight: 900 !important;" class="text-style-ro-60">SHERLOOK 3000</p>
+            <p style="margin-top: 50px; font-weight: 900 !important;" class="text-style-ro-60">SHERLOOK</p>
         </div>
     </div>
 
     <div class="col-lg-6 px-0" style="display: flex; flex-direction: column; height: calc(100% - 70px);">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-custom">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+                        <div class="navbar-nav ms-auto">
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
         <div class="d-flex container-fluid align-items-center justify-content-center mt-4 mb-4" style="flex-grow: 1;">
             <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
                 <div class="container-custom card col-lg-10 col-md-10 col-sm-12">
                     <div class="row justify-content-center">
                         <div class="col-lg-11 col-sm-10">
                             <div class="card-body pt-4 pb-4" style="width: 100%;">
-                                <h5 class="card-title text-style-re-40-600w mb-3">Welcome back</h5>
-                                <p class="text-style-ro-16 card-text mb-4">Don't have an account?<a href="{% url 'register' %}" style="color: #FF6B2C; padding-left: 10px; text-decoration: none;">Sign up</a></p>
+                                <h5 class="card-title text-style-ro-32b mb-3">Welcome back!</h5>
                                 <form method="POST">
                                     {% csrf_token %}
                                     {% for field in form %}
-                                        <label class="text-style-ro-14l mb-2">{{field.label}}</label>
-                                        {{field }}
+                                        {% if field.field.widget.input_type != 'checkbox' %}
+                                            <label class="text-style-ro-14l mb-2">{{field.label}}</label>
+                                            {{ field }}
+                                        {% elif field.field.widget.input_type == 'checkbox' %}
+                                            {{ field }}<label class="text-style-ro-14" style="margin-left: 10px;">{{field.label}}</label>
+                                        {% endif %}
                                     {% endfor %}
-                                    <div class="d-flex justify-content-between">
-                                        <button id="login-button" type="submit" style="width: 100%;" class="button-custom-style mt-5 me-3">
+                                    <div class="d-flex justify-content-center">
+                                        <button id="login-button" type="submit" style="width: 100%;" class="button-custom-style mt-4">
                                             <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
-                                                Log-in                                        </button>
+                                                Log-in
+                                        </button>
                                     </div>
                                 </form>
-                                <hr style="color: #5E6B78;">
-                            </div>               
+                                <div class="mt-3" style="height: 1.5px; background-color: #5E6B78; opacity: 90%"></div>
+                                <div class="d-flex justify-content-center mt-4">
+                                    <p class="text-style-ro-16 card-text">Don't have an account?<a href="{% url 'register' %}" style="color: #FF6B2C; padding-left: 10px; text-decoration: none;">Sign up</a></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -252,33 +266,33 @@
     </div>
     </div>
 
-    <footer>
-        <nav class="navbar fixed-bottom navbar-expand-lg footer-custom">
-            <div class="container-fluid px-5">
-                <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">
-                    <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
-                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
-                                WHO ARE WE?
-                            </a>
-                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
-                                CONTACT
-                            </a>
-                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">
-                                FAQ
-                            </a>
-                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
-                                SHERLOOK APP
-                            </a>
-                            <div>
-                                <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </footer>
+{#    <footer>#}
+{#        <nav class="navbar fixed-bottom navbar-expand-lg footer-custom">#}
+{#            <div class="container-fluid px-5">#}
+{#                <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">#}
+{#                    <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">#}
+{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
+{#                                WHO ARE WE?#}
+{#                            </a>#}
+{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
+{#                                CONTACT#}
+{#                            </a>#}
+{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">#}
+{#                                FAQ#}
+{#                            </a>#}
+{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
+{#                                SHERLOOK APP#}
+{#                            </a>#}
+{#                            <div>#}
+{#                                <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">#}
+{#                            </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </nav>#}
+{#    </footer>#}
 
-            
+
 
   <!-- Bootstrap core JavaScript-->
   <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
